# cv_interior_clf

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/data/: Dataset.py  LitDataLoader.py  processing_df.py
src/model/: ModelLight.py
