[tool.poetry]
name = "mlposproj"
version = "0.1.0"
description = ""
authors = ["vectorRNspace"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
flake8 = "^6.0.0"
scikit-learn = "^1.2.2"
dvc = {extras = ["s3"], version = "^2.10.2"}
pytesseract = "^0.3.10"
lemmagen3 = "^3.5.0"
stop-words = "^2018.7.23"
pandas = "^2.0.1"
torch = "2.0.0"
torchvision = "^0.15.1"
albumentations = "^1.3.0"
click = "^8.1.3"
lightning = "2.0.1"
pytorch-optimizer = "^2.9.0"
torchmetrics = "^0.11.4"
comet-ml = "^3.33.0"
seaborn = "^0.12.2"
openpyxl = "^3.1.2"
notebook = "^6.5.4"
setuptools = "^67.7.2"
finetuning-scheduler = "^2.0.4"
pydantic = "1.10.7"
fastapi = "0.85.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "python setup.py install"
